fixing shadow, align textbox to center center and added gif

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,13 @@ body {
 	perspective: 700px;
 }
 
+.textbox{
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	justify-content: center;
+}
+
 
 .card {
 	background: white;
@@ -99,7 +106,7 @@ body {
 	max-width: 1200px;
 	border-radius: 1px;
 	margin: 35px 0px;
-	box-shadow: 0px -1px 20px -13px rgba(122, 0, 122, 1);
+	box-shadow: 0px -1px 20px -13px rgb(102, 102, 102);
 	display: flex;
 	flex-flow: column;
 	align-items: center;
@@ -197,8 +204,10 @@ footer {
 	/* card */
 
 	.textbox {
+		
 		padding-right: 10%;
 		max-width: 700px;
+		
 	}
 
 	.card {
